# Splashy

./: .gitignore  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: index.html  styles.css
src/: App.css  App.tsx  constants.ts  i18n.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: getter.rs  main.rs  scheduler.rs  settings.rs  wallpaper.rs
src-tauri/src/api/: batch.rs  collections.rs  colors.rs  mod.rs  queries.rs  related.rs  settings.rs  sync.rs  time_groups.rs  topics.rs  users.rs  wallpaper.rs
src-tauri/src/fs/: cleanup.rs  dirs.rs  files.rs  images.rs  mod.rs  paths.rs
src-tauri/src/unsplash/: client.rs  mod.rs  models.rs
src/components/: ActiveTargetsModal.tsx  ApiKeySetup.tsx  CronScheduler.tsx  FilterBar.tsx  GlassPanel.tsx  Sidebar.tsx  SidebarButton.tsx  TitleBar.tsx  Toggle.tsx  icons.tsx
src/locales/: en.json  ro.json
src/views/: CollectionsView.tsx  ColorsView.tsx  HomeView.tsx  QueriesView.tsx  RelatedView.tsx  SettingsView.tsx  TopicsView.tsx  UsersView.tsx
