[package]
name = "my-wallpaper-app"
version = "1.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "my-wallpaper-app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "my_wallpaper_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.6"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12.24", features = ["json", "stream", "rustls-tls"] }
dirs = "6.0.0"
wallpaper = "3.2.0"
rand = "0.9.2"
image = "0.25.8"
chrono = "0.4"
cron = "0.12"
regex = "1"
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSScreen"] }
objc2-foundation = { version = "0.3", features = ["NSURL", "NSString", "NSDictionary", "NSArray", "NSError"] }
